Change title for base.html

--- a/evite/templates/base.html
+++ b/evite/templates/base.html
@@ -11,7 +11,7 @@
     {% block head %}
 
     {% endblock %}
-    <title> {%block title%}HOME{%endblock%} </title>
+    <title> {%block title%}EVITE{%endblock%} </title>
   </head>
 <body>
 
