--- a/evite/templates/evite/viewEvent.html
+++ b/evite/templates/evite/viewEvent.html
@@ -4,7 +4,7 @@
 
 {%load static%}
 {%for event in events%}
-
+<a href = "{%url 'evite:viewEventDesc' event.id %}">
 <div class="card mb-3">
   <img src="{{ event.image.url }}" class="card-img-top" alt="Event Image">
   <div class="card-body">
@@ -13,6 +13,7 @@
     <p class="card-text"><small class="text-muted">{{event.city}}<br>{{event.startDate}}-{{event.endDate}}</small></p>
   </div>
 </div>
+</a>
 {%endfor%}
 
 {%endblock%}
