--- a/evite/templates/evite/participantForm.html
+++ b/evite/templates/evite/participantForm.html
@@ -2,7 +2,7 @@
 
 {%block body%}
   <div class='container'>
-    <form action="{% url 'evite:participantForm' %}" method="post">
+    <form action="{% url 'evite:participantForm' event.id %}" method="post">
       {%csrf_token%}
       {{form}}
       <input type="submit" value="Submit">
