--- a/evite/templates/base.html
+++ b/evite/templates/base.html
@@ -39,6 +39,9 @@
         <li>
           <a class='nav-link' href="{% url 'evite:createEvent' %}">Create Event</a>
         </li>
+        <li>
+          <a class='nav-link' href="{% url 'evite:viewEvent' %}">Show All Events</a>
+        </li>
 
 
       </ul>
