--- a/evite/templates/evite/index.html
+++ b/evite/templates/evite/index.html
@@ -14,23 +14,14 @@
 
 
 
-  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" style="background-img=url()" >
-        <div class="col-md-5 p-lg-5 mx-auto my-5">
-          <h1 class="display-4 font-weight-normal">Punny headline</h1>
-          <p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple's marketing pages.</p>
-          <a class="btn btn-outline-secondary" href="#">Coming soon</a>
-        </div>
-        <div class="product-device box-shadow d-none d-md-block"></div>
-        <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
-      </div>
-
-
 
 <div class="container">
 
 
 
 
+
+{% if not user.is_authenticated%}
             <form class="form-signin" action="{% url 'evite:login' %}" name="login" method="POST">
                 <h2 class="form-signin-heading">Organizer's Login</h2>
               {% csrf_token %}
@@ -52,6 +43,7 @@
                     <button type="submit" name="login" class="btn btn-lg btn-primary btn-block"><em>Login</em></button>
 
                   </form>
+                  {%endif%}
 
               <a href="{% url 'evite:register' %}" >  <button  name="register" class="btn btn-lg btn-primary btn-block" style="width:300px;margin:auto;"><em>Register New</em></button> </a>
             </div>
