--- a/evite/templates/evite/rsvporg.html
+++ b/evite/templates/evite/rsvporg.html
@@ -12,6 +12,8 @@
       <input type="submit" value="Submit">
   </form>
 
+  <a href="{% url 'evite:index'%}">OK I'm Done</a>
+
 </div>
 
 {%endblock%}
